[workspace]
members = ["contracts/*"]


[profile.release.package.cw20]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release.package.deposit-cw20]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

